[package]
name = "clip_ctash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clip_ctash"
path = "src/lib/mod.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { verion = "0.4", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
derive_more = "0.99"
rand = "0.8.5"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }